Change strings by constants in SearchViewController

--- a/FollowingStocks/Base.lproj/Main.storyboard
+++ b/FollowingStocks/Base.lproj/Main.storyboard
@@ -898,7 +898,7 @@
         <image name="baseline_timer_black_24pt" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MsL-6z-304"/>
+        <segue reference="R2t-V6-sgm"/>
         <segue reference="UK9-HE-9ua"/>
     </inferredMetricsTieBreakers>
 </document>
