Remove buttons of FollowingView and PortfolioView.

--- a/FollowingStocks/Base.lproj/Main.storyboard
+++ b/FollowingStocks/Base.lproj/Main.storyboard
@@ -173,13 +173,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Hr2-Fx-SvD"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Following" id="pjA-7E-MMa">
-                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="jVy-yd-udn"/>
-                        <rightBarButtonItems>
-                            <barButtonItem systemItem="refresh" id="LLP-aE-TaI"/>
-                            <barButtonItem title="AutoRefresh" image="baseline_timer_black_24pt" id="XOU-75-33l"/>
-                        </rightBarButtonItems>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Following" id="pjA-7E-MMa"/>
                     <connections>
                         <outlet property="tableView" destination="abJ-82-WST" id="QaA-bu-gcn"/>
                         <segue destination="1uU-I1-yR8" kind="show" identifier="FollowingToDetail2" id="R2t-V6-sgm"/>
@@ -844,10 +838,6 @@
                                 <action selector="addAction:" destination="Loz-2r-xdk" id="gO7-fl-uin"/>
                             </connections>
                         </barButtonItem>
-                        <rightBarButtonItems>
-                            <barButtonItem systemItem="refresh" id="Dwy-TN-Zhq"/>
-                            <barButtonItem title="AutoRefresh" image="baseline_timer_black_24pt" id="SY1-9R-L6f"/>
-                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="OSr-pw-zhY" id="WYP-Vp-huo"/>
@@ -898,10 +888,9 @@
     <resources>
         <image name="baseline_business_center_black_24pt" width="24" height="24"/>
         <image name="baseline_my_location_black_24pt" width="24" height="24"/>
-        <image name="baseline_timer_black_24pt" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MsL-6z-304"/>
+        <segue reference="R2t-V6-sgm"/>
         <segue reference="UK9-HE-9ua"/>
     </inferredMetricsTieBreakers>
 </document>
