--- a/FollowingStocks/Base.lproj/Main.storyboard
+++ b/FollowingStocks/Base.lproj/Main.storyboard
@@ -30,9 +30,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="140.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name que vai aparecer no layble do lable" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAe-bV-fi3">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name que vai aparecer no layble do lable" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAe-bV-fi3">
                                             <rect key="frame" x="138" y="11" width="221" height="46"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="46" id="paL-89-WsD"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -43,27 +45,34 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="JRJ-ex-SfG" secondAttribute="height" multiplier="1:1" id="rsp-St-i17"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="22"/>
+                                            <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                             <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <size key="shadowOffset" width="1" height="-1"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="exchange" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bhb-vC-bLa">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="exchange" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bhb-vC-bLa">
                                             <rect key="frame" x="138" y="65" width="221" height="28"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="Bhb-vC-bLa" firstAttribute="top" secondItem="tAe-bV-fi3" secondAttribute="bottom" constant="8" symbolic="YES" id="5ci-gc-3pp"/>
                                         <constraint firstItem="JRJ-ex-SfG" firstAttribute="bottom" secondItem="xWL-i1-phh" secondAttribute="bottomMargin" id="KF6-1B-HYI"/>
                                         <constraint firstItem="JRJ-ex-SfG" firstAttribute="top" secondItem="xWL-i1-phh" secondAttribute="topMargin" id="bQd-dw-4UP"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="JRJ-ex-SfG" secondAttribute="trailingMargin" id="ggQ-4j-7S1"/>
+                                        <constraint firstItem="tAe-bV-fi3" firstAttribute="top" secondItem="JRJ-ex-SfG" secondAttribute="top" id="hdO-MB-shj"/>
+                                        <constraint firstItem="tAe-bV-fi3" firstAttribute="leading" secondItem="Bhb-vC-bLa" secondAttribute="leading" id="iSc-DG-zZP"/>
+                                        <constraint firstItem="tAe-bV-fi3" firstAttribute="trailing" secondItem="Bhb-vC-bLa" secondAttribute="trailing" id="oZc-vX-1Bb"/>
                                         <constraint firstItem="JRJ-ex-SfG" firstAttribute="leading" secondItem="xWL-i1-phh" secondAttribute="leadingMargin" id="w62-2s-2Iu"/>
+                                        <constraint firstItem="tAe-bV-fi3" firstAttribute="leading" secondItem="JRJ-ex-SfG" secondAttribute="trailing" constant="3" id="xno-1K-NNL"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="tAe-bV-fi3" secondAttribute="trailing" id="yi4-or-ohg"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="exchangeLable" destination="Bhb-vC-bLa" id="UtN-Gp-VPa"/>
                                     <outlet property="nameLable" destination="tAe-bV-fi3" id="RxF-IC-b9V"/>
@@ -396,7 +405,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VJV-vP-Ed6" userLabel="ViewHeader">
-                                <rect key="frame" x="7" y="64" width="361" height="60"/>
+                                <rect key="frame" x="7" y="20" width="361" height="60"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QRD-3M-05e" userLabel="StackViewHeader">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="60"/>
@@ -426,7 +435,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="6yX-GV-TgL" userLabel="StackViewSymbolPrice">
-                                <rect key="frame" x="7" y="131" width="361" height="100"/>
+                                <rect key="frame" x="7" y="87" width="361" height="100"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KK7-8E-zeW">
                                         <rect key="frame" x="0.0" y="0.0" width="177" height="100"/>
@@ -514,7 +523,7 @@
                                 </constraints>
                             </stackView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2qG-mQ-I4j">
-                                <rect key="frame" x="7" y="238" width="361" height="380"/>
+                                <rect key="frame" x="7" y="194" width="361" height="473"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="1" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fT6-k5-wXN" userLabel="Stack View Quote">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="150"/>
@@ -890,7 +899,7 @@
         <image name="baseline_my_location_black_24pt" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="R2t-V6-sgm"/>
+        <segue reference="9eF-Kp-7dJ"/>
         <segue reference="UK9-HE-9ua"/>
     </inferredMetricsTieBreakers>
 </document>
